--- a/_config.yml
+++ b/_config.yml
@@ -39,13 +39,13 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
+  email: "slemonla13@gmail.com"
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
+  facebook: nakibinge.simon.1
+  github: simonandro
+  twitter: Simonnakibinge
   patreon: DeanAttali
-  youtube: c/daattali
+  youtube: channel/UCqrSRimywnQnossYysTn05g
 #  medium: yourname
 #  reddit: yourname
 #  linkedin: daattali
