--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ social-network-links:
   facebook: nakibinge.simon.1
   github: simonandro
   twitter: Simonnakibinge
-  patreon: DeanAttali
+#  patreon: DeanAttali
   youtube: channel/UCqrSRimywnQnossYysTn05g
 #  medium: yourname
 #  reddit: yourname
